fix side spacing again

--- a/salt_slug_app/R-stuff/www/styles.css
+++ b/salt_slug_app/R-stuff/www/styles.css
@@ -12,8 +12,13 @@ body{
 }
 
 .container-fluid {
-  padding: 0;
+  
   margin: 0;
+}
+
+.navbar{
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
 .navbar-brand{
